# general-purpose-control

./: .gitignore  .qmake.stash  CMakeLists.txt  CMakeSettings.json  Doxyfile  Keithley_Control.pro  README.md  deploy_debug.bat  deploy_release.bat  general-purpose-control.pro  general-purpose-control.pro.user.4.8-pre1  keithley-control.pro  keithley_2410.cpp  keithley_2xxx.cpp  mainpage.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurement_device.cpp  measurement_device.h  rs232.cpp  rs232.h
.github/workflows/: main.yml
cmake/: Windeployqt.cmake
config/: changelog  copyright  version.h
docs/: _adafruit___g_f_x_8cpp.html  _adafruit___g_f_x_8cpp__incl.map  _adafruit___g_f_x_8cpp__incl.md5  _adafruit___g_f_x_8h.html  _adafruit___g_f_x_8h__dep__incl.map  _adafruit___g_f_x_8h__dep__incl.md5  _adafruit___g_f_x_8h__incl.map  _adafruit___g_f_x_8h__incl.md5  _adafruit___g_f_x_8h_source.html  _r_e_a_d_m_e_8md.html  adafruit__ssd1306_8cpp.html  adafruit__ssd1306_8cpp__incl.map  adafruit__ssd1306_8cpp__incl.md5  adafruit__ssd1306_8h.html  adafruit__ssd1306_8h__dep__incl.map  adafruit__ssd1306_8h__dep__incl.md5  adafruit__ssd1306_8h__incl.map  adafruit__ssd1306_8h__incl.md5  adafruit__ssd1306_8h_source.html  addresses_8h.html  addresses_8h__dep__incl.map  addresses_8h__dep__incl.md5  addresses_8h_source.html  ads1015_8h.html  ads1015_8h__dep__incl.map  ads1015_8h__dep__incl.md5  ads1015_8h__incl.map  ads1015_8h__incl.md5  ads1015_8h_source.html  ads1115_8cpp.html  ads1115_8cpp__incl.map  ads1115_8cpp__incl.md5  ads1115_8h.html  ads1115_8h__dep__incl.map  ads1115_8h__dep__incl.md5  ads1115_8h__incl.map  ads1115_8h__incl.md5  ads1115_8h_source.html  annotated.html  bme280_8cpp.html  (+917 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+102 more)
documentation/: .gitignore  Presentation.tex  Protokoll.tex  fontawesome.sty
documentation/content/: .gitignore  Silbentrennung.tex  appendix.tex  classes.tex  generalpurposecontrol.dia  introduction.tex  newdevice.tex  title.tex
documentation/content/code/: checkdevice.cpp  connectbus.cpp  devicemanager.cpp  devicemanager_short.cpp  keithley_2410.cpp  keithley_2410.h  queuemeasure.cpp  scpidevice.h  setscanparameter.cpp
documentation/content/figures/: generalpurposecontrol.ps
documentation/macros/: beamerstyle.tex  code-highlighting.tex
documentation/preambel/: packages.tex  style-biblatex.tex  style.tex
doxygen/: Doxyfile.in
include/: devicemanager.h  filehandler.h  mainwindow.h  measurementdevice.h  measurementparameter.h  scanparameterselection.h  serial.h  serialconsole.h  settings.h  version.h
include/devices/: dummy.h  hameg_hm8143.h  hp_34401a.h  keithley_2000.h  keithley_2410.h  rigol_dsa1030a.h  scpidevice.h  sourcetronic_st2819a.h  tektronix_dmm4020.h
source/: CMakeLists.txt  CMakeSettings.json  MeasurementControl_en_150.ts
source/config/: description.txt  general-purpose-control.1  version.h
source/doxygen/: Doxyfile  Doxyfile.in
source/include/: CLogger.h  CPosition.h  CPositionVisuXY.h  CPositionVisuXYZ.h  CSynchcommConsumer.h  CSynchcommProducer.h  EnumHelper.h  GlobalConsts.h  cdevice.h  chighlighter.h  cmeasurementcontrol.h  cmeasurementdevice.h  cprobersystem.h  cprobervisu.h  filehandler.h  mainwindow.h  measurementdevice.h  measurementparameter.h  scanparameterselection.h  serial.h  ui_mainwindow.h  ui_measurementdevice.h  ui_scanparameterselection.h
source/include/devices/: dummy.h  gw_instek_gpd4303s.h  hameg_hm8143.h  hp_34401a.h  keithley_2000.h  keithley_2410.h  rigol_dsa1030a.h  scpidevice.h  sourcetronic_st2819a.h  sourcetronic_st2826 copy.h  sourcetronic_st2826.h  tektronix_dmm4020.h  voltcraft_psp1803.h
source/res/: resources.qrc
source/src/: CLogger.cpp  CPosition.cpp  CPositionVisuXY.cpp  CPositionVisuXYZ.cpp  CSynchcommConsumer.cpp  CSynchcommProducer.cpp  cdevice.cpp  chighlighter.cpp  cmeasurementcontrol.cpp  cmeasurementdevice.cpp  cprobersystem.cpp  cprobervisu.cpp  devicemanager.cpp  filehandler.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  measurementdevice.cpp  measurementdevice.ui  scanparameterselection.cpp  serial.cpp  serialconsole.cpp  serialconsole.ui  settings.ui
source/src/devices/: dummy.cpp  gw_instek_gpd4303s.cpp  hameg_hm8143.cpp  hp_34401a.cpp  keithley_2000.cpp  keithley_2410.cpp  rigol_dsa1030a.cpp  scpidevice.cpp  sourcetronic_st2819a.cpp  sourcetronic_st2826.cpp  tektronix_dmm4020.cpp  voltcraft_psp1803.cpp
source/src/devices/spi/serialadapter/: serialadapter.cpp  spi.cpp
src/: adjustedvalue.ui  devicegenerator.cpp  devicegenerator.h  devicemanager.cpp  devicemanager.h  filehandler.cpp  filehandler.h  keithley_2000.cpp  keithley_2000.h  keithley_2000.ui  keithley_2410.cpp  keithley_2410.h  keithley_2410.ui  keithley_2xxx.cpp  keithley_2xxx.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurement_device.h  measurementdevice.cpp  measurementdevice.h  measurementdevice.ui  measurementparameter.h  resources.qrc  rs232.cpp  rs232.h  scanParameterSelection.h  scanparameterselection.cpp  scanparameterselection.h  scanparameterselection.ui  serial.cpp  serial.h  serialconsole.cpp  serialconsole.h  serialconsole.ui  settings.cpp  settings.h  settings.ui  setvalue.cpp  setvalue.h  (+1 more)
src/devices/: dummy.cpp  dummy.h  gw_instek_gpd4303s.cpp  gw_instek_gpd4303s.h  hameg_hm8143.cpp  hameg_hm8143.h  hp_34401a.cpp  hp_34401a.h  keithley_2000.cpp  keithley_2000.h  keithley_2410.cpp  keithley_2410.h  keithley_2xxx.cpp  keithley_2xxx.h  rigol_dsa1030a.cpp  rigol_dsa1030a.h  scpidevice.cpp  scpidevice.h  sourcetronic_st2819a.cpp  sourcetronic_st2819a.h  tektronix_dmm4020.cpp  tektronix_dmm4020.h  voltcraft_psp1803.cpp  voltcraft_psp1803.h
(+3 files in other folders)
